# nilmlite

./: .gitignore  CITATION.cff  README.md  STACK.md  SYSTEMS.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bench/: bench_load.py  gen_data.py  results.md  systems_compare.py
docs/: dae_fridge.onnx  dae_fridge_redd.onnx  demo_data.json  gru_fridge.onnx  gru_fridge_redd.onnx  index.html  patchtst_fridge.onnx  patchtst_fridge_redd.onnx  seq2point_dish_washer.onnx  seq2point_fridge.onnx  seq2point_fridge_redd.onnx  seq2point_microwave.onnx  seq2point_washing_machine.onnx  studio.html  wasm.html
docs/wasm/: nilm_core.js  nilm_core_bg.wasm
examples/: build_all.py  build_docs.py  build_viz.py  cross_dataset_iawe.py  quickstart.py  real_redd_demo.py  run_leaderboard.py  train_seq2point.py
rust/nilm-core/: Cargo.toml
rust/nilm-core/src/: lib.rs
src/nilmlite/: __init__.py  baselines.py  classic.py  cli.py  convert.py  evaluate.py  io.py  leaderboard.py  matrix.py  metrics.py  models_torch.py  report.py  resample.py  schema.py  server.py  tasks.py  viz.py  windows.py
tests/: test_classic.py  test_convert_csv.py  test_evaluate.py  test_io_roundtrip.py  test_matrix.py  test_metrics.py  test_models_torch.py
tools/: nilmtk_to_parquet.py
